--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_script:
 
 script:
 - smalltalkci .smalltalk.ston
-- make | ./build_scripts/travis_fold Compiling PDF ...
+- make complete | ./build_scripts/travis_fold Compiling PDF ...
 - mv SBE.pdf "SBE_${SQUEAK_VERSION}.pdf"
 - | # Upload PDF file to Google Drive
   if [ "$TRAVIS_PULL_REQUEST" = false ]
